Added reuters corpus
modified makefile to train with the brown corpus and execute om the reuters one.